// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BandwidthPage renders correctly 1`] = `
<div class="bandwidth">
  <h1 class="bandwidth__title">Bandwidth &amp; Disk</h1>
  <div class="bandwidth__dropdowns">
    <node-selection-dropdown-stub></node-selection-dropdown-stub>
    <satellite-selection-dropdown-stub></satellite-selection-dropdown-stub>
  </div>
  <div class="chart-container bandwidth-chart">
    <div class="chart-container__title-area">
      <p class="chart-container__title-area__title">Bandwidth Used This Month</p>
      <div class="chart-container__title-area__buttons-area"><button name="Show Bandwidth Chart" type="button" class="chart-container__title-area__chart-choice-item active">
          Bandwidth
        </button> <button name="Show Egress Chart" type="button" class="chart-container__title-area__chart-choice-item">
          Egress
        </button> <button name="Show Ingress Chart" type="button" class="chart-container__title-area__chart-choice-item">
          Ingress
        </button></div>
    </div>
    <p class="chart-container__amount"><b>0.7GB</b></p>
    <div onresize="recalculateChartDimensions()" class="chart-container__chart">
      <bandwidth-chart-stub width="0" height="0"></bandwidth-chart-stub>
    </div>
  </div>
  <section class="bandwidth__chart-area">
    <section class="chart-container">
      <div class="chart-container__title-area disk-space-title">
        <p class="chart-container__title-area__title">Average Disk Space Used This Month</p>
      </div>
      <p class="chart-container__amount disk-space-amount"><b>0B</b></p>
      <div onresize="recalculateChartDimensions()" class="chart-container__chart">
        <disk-space-chart-stub width="0" height="0"></disk-space-chart-stub>
      </div>
    </section>
    <section class="disk-stat-chart">
      <disk-stat-chart-stub></disk-stat-chart-stub>
    </section>
  </section>
</div>
`;

exports[`BandwidthPage renders correctly with egress chart 1`] = `
<div class="bandwidth">
  <h1 class="bandwidth__title">Bandwidth &amp; Disk</h1>
  <div class="bandwidth__dropdowns">
    <node-selection-dropdown-stub></node-selection-dropdown-stub>
    <satellite-selection-dropdown-stub></satellite-selection-dropdown-stub>
  </div>
  <div class="chart-container bandwidth-chart">
    <div class="chart-container__title-area">
      <p class="chart-container__title-area__title">Bandwidth Used This Month</p>
      <div class="chart-container__title-area__buttons-area"><button name="Show Bandwidth Chart" type="button" class="chart-container__title-area__chart-choice-item">
          Bandwidth
        </button> <button name="Show Egress Chart" type="button" class="chart-container__title-area__chart-choice-item active">
          Egress
        </button> <button name="Show Ingress Chart" type="button" class="chart-container__title-area__chart-choice-item">
          Ingress
        </button></div>
    </div>
    <p class="chart-container__amount"><b>577.7GB</b></p>
    <div onresize="recalculateChartDimensions()" class="chart-container__chart">
      <egress-chart-stub width="0" height="0"></egress-chart-stub>
    </div>
  </div>
  <section class="bandwidth__chart-area">
    <section class="chart-container">
      <div class="chart-container__title-area disk-space-title">
        <p class="chart-container__title-area__title">Average Disk Space Used This Month</p>
      </div>
      <p class="chart-container__amount disk-space-amount"><b>0B</b></p>
      <div onresize="recalculateChartDimensions()" class="chart-container__chart">
        <disk-space-chart-stub width="0" height="0"></disk-space-chart-stub>
      </div>
    </section>
    <section class="disk-stat-chart">
      <disk-stat-chart-stub></disk-stat-chart-stub>
    </section>
  </section>
</div>
`;

exports[`BandwidthPage renders correctly with ingress chart 1`] = `
<div class="bandwidth">
  <h1 class="bandwidth__title">Bandwidth &amp; Disk</h1>
  <div class="bandwidth__dropdowns">
    <node-selection-dropdown-stub></node-selection-dropdown-stub>
    <satellite-selection-dropdown-stub></satellite-selection-dropdown-stub>
  </div>
  <div class="chart-container bandwidth-chart">
    <div class="chart-container__title-area">
      <p class="chart-container__title-area__title">Bandwidth Used This Month</p>
      <div class="chart-container__title-area__buttons-area"><button name="Show Bandwidth Chart" type="button" class="chart-container__title-area__chart-choice-item">
          Bandwidth
        </button> <button name="Show Egress Chart" type="button" class="chart-container__title-area__chart-choice-item">
          Egress
        </button> <button name="Show Ingress Chart" type="button" class="chart-container__title-area__chart-choice-item active">
          Ingress
        </button></div>
    </div>
    <p class="chart-container__amount"><b>5MB</b></p>
    <div onresize="recalculateChartDimensions()" class="chart-container__chart">
      <ingress-chart-stub width="0" height="0"></ingress-chart-stub>
    </div>
  </div>
  <section class="bandwidth__chart-area">
    <section class="chart-container">
      <div class="chart-container__title-area disk-space-title">
        <p class="chart-container__title-area__title">Average Disk Space Used This Month</p>
      </div>
      <p class="chart-container__amount disk-space-amount"><b>0B</b></p>
      <div onresize="recalculateChartDimensions()" class="chart-container__chart">
        <disk-space-chart-stub width="0" height="0"></disk-space-chart-stub>
      </div>
    </section>
    <section class="disk-stat-chart">
      <disk-stat-chart-stub></disk-stat-chart-stub>
    </section>
  </section>
</div>
`;
